--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <div class="project">
                 <div class="image-right" data-aos="fade-up-left" data-aos-offset="400" data-aos-duration="1200">
                     <picture>
-                        <video loop muted autoplay="autoplay" src="./assets/img/jpg/gesture_car.mp4" height="300vw"></video>
+                        <video loop muted autoplay="autoplay" src="./assets/videos/gesture_car.mp4" height="300vw"></video>
                     </picture>
                 </div>
                 <div class="content" style="text-align: center" data-aos="fade-up-right" data-aos-offset="400" data-aos-duration="1200">
@@ -209,7 +209,7 @@
                     </picture>
                 </div>
                 <div class="content-right" style="text-align:center" data-aos="fade-up-left" data-aos-offset="450" data-aos-duration="1200">
-                    <h3>Home Automatin System</h3>
+                    <h3>Home Automation System</h3>
 
                     <!-- icons of the technology used -->
                     <div>
