--- a/index.html
+++ b/index.html
@@ -304,10 +304,10 @@
                 <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/4.jpeg" alt=""></div>
                 <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/2.jpeg" alt=""></div>
                 <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/codealpha.jpeg" alt=""></div>
-                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image1.jpeg" alt=""></div>
-                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image2.jpeg" alt=""></div>
-                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image3.jpeg" alt=""></div>
-                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image4.jpeg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image1.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image2.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image3.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="220" data-aos-duration="1200"><img src="./assets/img/jpg/image4.jpg" alt=""></div>
             </div>
             
             <div id="popup-image">
