--- a/index.html
+++ b/index.html
@@ -296,6 +296,12 @@
             </div>
             
             <div id="photos">
+                <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/04.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/05.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/06.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/07.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/08.jpg" alt=""></div>
+                <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/09.jpg" alt=""></div>
                 <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/7.jpg" alt=""></div>
                 <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/aadhar_winner.jpeg" alt=""></div>
                 <div class="image" data-aos="zoom-in" data-aos-offset="350" data-aos-duration="1200"><img src="./assets/img/jpg/6.jpeg" alt=""></div>
