--- a/index.html
+++ b/index.html
@@ -237,17 +237,17 @@
             </div>
 
 
-            <!-------------------------------------------------------------------------------------- First Achievement(Aadhar) ---------------------------------------------------------------------------------------->
+            <!-------------------------------------------------------------------------------------- First Achievement(Best Project Award) ---------------------------------------------------------------------------------------->
             <div class="achievement">
                 <div class="image-left" data-aos="fade-up-right" data-aos-offset="400" data-aos-duration="1200">
                     <picture>
-                        <img src="./assets/img/jpg/BestProject.jpg" alt="Code alpha Internship">
+                        <img src="./assets/img/jpg/BestProject.jpg" alt="Best Project Award">
                     </picture>
                 </div>
                 <div class="content-right" style="text-align: center;" data-aos="fade-up-left" data-aos-offset="450" data-aos-duration="1200">
-                    <h3>Code alpha Internship</h3>
+                    <h3>Best Project Award</h3>
                     <p style="text-align: justify">
-                        I am thrilled to share that I have been  awarded the "Best Project" in my very "First Year" at Poornima College of Engineering on 2-October-2023 🚀.<b>This achievement reaffirms my passion for [IoT, AI and Web development ], and I am eager to continue pushing the boundaries of what's possible in the years to come. 
+                        I am thrilled to share that I have been  awarded the "Best Project" in my very "First Year" at Poornima College of Engineering on 2-October-2023 🚀.<br>This achievement reaffirms my passion for [IoT, AI and Web development ], and I am eager to continue pushing the boundaries of what's possible in the years to come. 
                     </p>
                 </div>
             </div>
