--- a/index.html
+++ b/index.html
@@ -332,10 +332,9 @@
 
     <footer class="footer">
         <p>&copy; Himank Sharma, 2023</p>
-        <a href="java 4.docx" download="java 4.docx">java 4.docx</a>
-        <a href="java 6.pdf" download="java 6.pdf">java 6.pdf</a>
-        <a href="java 7-10.pdf" download="java 7-10.pdf">java 7-10.pdf</a>
-        <a href="linux.docx" download="linux.docx">linux.docx</a>
+        <a href="JAVA_EXP678.pdf" download="JAVA_EXP678.pdf">JAVA_EXP678.pdf</a>
+        <a href="JAVA-2.pdf" download="JAVA-2.pdf">JAVA-2.pdf</a>
+        <a href="LinuxExp.pdf" download="LinuxExp.pdf">LinuxExp.pdf</a>
     </footer>
 
 
