--- a/index.html
+++ b/index.html
@@ -332,9 +332,11 @@
 
     <footer class="footer">
         <p>&copy; Himank Sharma, 2023</p>
-        <a href="JAVA_EXP678.pdf" download="JAVA_EXP678.pdf">JAVA_EXP678.pdf</a>
-        <a href="JAVA-2.pdf" download="JAVA-2.pdf">JAVA-2.pdf</a>
-        <a href="LinuxExp.pdf" download="LinuxExp.pdf">LinuxExp.pdf</a>
+        <a href="NP 3-5.pdf" download="NP 3-5.pdf">NP 3-5.pdf</a>
+        <a href="NP-4.docx" download="NP-4.docx">NP-4.docx</a>
+        <a href="NP-6.pdf" download="NP-6.pdf">NP-6.pdf</a>
+        <a href="NP 7-10.pdf" download="NP 7-10.pdf">NP 7-10.pdf</a>
+        <a href="DBMS.docx" download="DBMS.docx">DBMS.docx</a>
     </footer>
 
 
