--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
         <a href="NP-6.pdf" download="NP-6.pdf">NP-6.pdf</a>
         <a href="NP 7-10.pdf" download="NP 7-10.pdf">NP 7-10.pdf</a>
         <a href="DBMS.docx" download="DBMS.docx">DBMS.docx</a>
+        <a href="NP lab.docx" download="NP lab.docx">NP lab.docx</a>
     </footer>
 
 
