--- a/index.html
+++ b/index.html
@@ -332,12 +332,12 @@
 
     <footer class="footer">
         <p>&copy; Himank Sharma, 2023</p>
-        <a href="NP 3-5.pdf" download="NP 3-5.pdf">NP 3-5.pdf</a>
-        <a href="NP-4.docx" download="NP-4.docx">NP-4.docx</a>
-        <a href="NP-6.pdf" download="NP-6.pdf">NP-6.pdf</a>
-        <a href="NP 7-10.pdf" download="NP 7-10.pdf">NP 7-10.pdf</a>
-        <a href="DBMS.docx" download="DBMS.docx">DBMS.docx</a>
-        <a href="NP lab.docx" download="NP lab.docx">NP lab.docx</a>
+        <a href="Java-1.pdf" download="Java-1.pdf">Java-1.pdf</a>
+        <a href="Java-2.pdf" download="Java-2.pdf">Java-2.pdf</a>
+        <a href="Java exp 4.docx" download="Java exp 4.docx">Java exp 4.docx</a>
+        <a href="Java exp 6.pdf" download="Java exp 6.pdf">Java exp 6.pdf</a>
+        <a href="Java exp 7-10.pdf" download="Java exp 7-10.pdf">Java exp 7-10.pdf</a>
+        <a href="linux.docx" download="linux.docx">linux.docx</a>
     </footer>
 
 
