--- a/index.html
+++ b/index.html
@@ -334,10 +334,8 @@
         <p>&copy; Himank Sharma, 2023</p>
         <a href="Java-1.pdf" download="Java-1.pdf">Java-1.pdf</a>
         <a href="Java-2.pdf" download="Java-2.pdf">Java-2.pdf</a>
-        <a href="Java exp 4.docx" download="Java exp 4.docx">Java exp 4.docx</a>
-        <a href="Java exp 6.pdf" download="Java exp 6.pdf">Java exp 6.pdf</a>
-        <a href="Java exp 7-10.pdf" download="Java exp 7-10.pdf">Java exp 7-10.pdf</a>
-        <a href="linux.docx" download="linux.docx">linux.docx</a>
+        <a href="Java.pdf" download="Java.pdf">Java.pdf</a>
+        <a href="linux.pdf" download="linux.pdf">linux.pdf</a>
     </footer>
 
 
